Update PDF layout and remove unused imports
Adjusted the orientation of content in the PDFVentaReports.java from the left to the right. Unnecessary imports and obsolete pieces of code were removed from SearchProductoService.java and ClienteService.java for code optimization.